--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     display: inline;
     justify-content: center;
     align-items: center;
-    height: 50px;
+    height:  50px;
     
 }
 
@@ -22,6 +22,10 @@
     background-color: #B22222;
     margin: 35px;
     text-decoration-style: wavy;
+}
+
+.hide{
+    display: none  !important;
 }
 
 
@@ -34,7 +38,7 @@ div{
 }
 
 ul{
-    display: grid;
+    display: block;
     justify-content: center;
     align-items: center;
     list-style-type: none;
@@ -45,10 +49,10 @@ li {
     width: 400px;
     margin-top: 15px;
     margin-bottom: 10px;
-    padding: 5px;
+    padding: 15px;
     background-color: rgb(255, 0, 242);
     color: black;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 10px;
     text-align: center;
   }
